<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/side_nav_bar"
    >
    <ScrollView
        android:layout_width="368dp"
        android:layout_height="551dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:contentDescription=""
            android:src="@drawable/logo"
            tools:ignore="ContentDescription" />


        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center|bottom"
            android:visibility="gone"
            tools:ignore="MissingConstraints"
             />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_person_white"
            android:drawablePadding="12dp"
            android:padding="8dp"
            android:hint="Username"
            android:textColorHint="#ffffff"
            android:maxLines="1"
            android:layout_marginTop="40dp"
            tools:ignore="DuplicateIds"
            android:textColor="@color/white"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db"
            />


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:drawablePadding="12dp"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:textColorHint="#ffffff"
            android:hint="Password"
            android:maxLines="1"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_lock_white"
            android:layout_marginTop="4dp"
            android:textColor="@color/white"

            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f9d7db"
            />


        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@drawable/btn_login"
            android:text="@string/btn_login"
            android:textColor="@color/colorAccent" />


        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@drawable/btn_signup"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <!-- Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@drawable/btn_signup"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>
    </LinearLayout>
</ScrollView>

</android.support.constraint.ConstraintLayout>
