<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/side_nav_bar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="277dp"
        tools:layout_editor_absoluteY="99dp"
        tools:ignore="MissingConstraints">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"

            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/activity_horizontal_margin">


                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="20dp"
                    android:contentDescription=""
                    android:src="@drawable/logo"
                    tools:ignore="ContentDescription" />


                <ProgressBar

                    android:id="@+id/progressBar"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_gravity="start|center"
                    android:visibility="gone" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:drawablePadding="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColorHint="#ffffff"
                    android:hint="Name"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_person_outline_red"
                    android:textColor="@color/white"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db"
                    />


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:background="@android:color/transparent"
                    android:drawablePadding="12dp"
                    android:padding="8dp"
                    android:hint="E-Mail"
                    android:textColorHint="#ffffff"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/ic_person_white"
                    android:layout_marginTop="4dp"
                    android:textColor="@color/white"/>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db"
                    />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:drawablePadding="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:textColorHint="#ffffff"
                    android:hint="Password"
                    android:maxLines="1"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="4dp"
                    android:drawableLeft="@drawable/ic_lock_white"
                    android:textColor="@color/white"
                    />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db"
                    />


                <EditText
                    android:id="@+id/phoneno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="12dp"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:focusableInTouchMode="true"
                    android:hint="Phone No"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:inputType="number"
                    android:maxLines="1"
                    android:drawableLeft="@drawable/phone"
                    android:textColor="@color/white"
                    android:background="@android:color/transparent"
                    android:textColorHint="@android:color/white"
                    tools:ignore="InvalidImeActionId" />
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#f9d7db"
                    />

                <Button
                    android:id="@+id/sign_up_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/btn_login"
                    android:text="@string/action_sign_in_short"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/btn_reset_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/btn_signup"
                    android:text="@string/btn_forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/btn_signup"
                    android:text="@string/btn_link_to_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


    </android.support.constraint.ConstraintLayout>

